[package]
name = "test2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
futures = "0.3.31"
tokio-stream = "0.1.15"
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
axum = { version = "0.7", features = ["macros", "http1", "http2"], default-features = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde_json = "1.0"
