[package]
name = "test2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
futures = "0.3.31"
tokio-stream = "0.1.15"
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
dotenvy = "0.15"
axum = { version = "0.7", default-features = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
